# DecafCompiler

./: #UI.glade#  .gitignore  CMakeLists.txt  Decaf.g4  README.md  UI.glade  UI.glade~  arit_test.decaf  code_generator.cpp  code_generator.h  data_tree.cpp  decaf_controller.cpp  decaf_controller.h  inter_code.cpp  inter_code.h  main.cpp  test.decaf  ui_builder.h  ui_controller.cpp  ui_controller.h
core/: Decaf.interp  Decaf.tokens  DecafBaseListener.cpp  DecafBaseListener.h  DecafBaseVisitor.cpp  DecafBaseVisitor.h  DecafLexer.cpp  DecafLexer.h  DecafLexer.interp  DecafLexer.tokens  DecafListener.cpp  DecafListener.h  DecafParser.cpp  DecafParser.h  DecafVisitor.cpp  DecafVisitor.h
lib/: decaf_std.asm
structs/: data_tree.h  error_item.cpp  error_item.h  scope.h  symb_table.cpp  symb_table.h  triple.cpp  triple.h
tests/: ackermann.asm  ackermann.decaf  arit_test.decaf  factorial.asm  factorial.decaf  fibonacci.asm  fibonacci.decaf  final_boss copy.txt  final_boss.txt  flow_inter_code.decaf  int_to_bin.decaf  intermediate_code.decaf  sem_errors.decaf  semantic_test copy.decaf  semantic_test.decaf  semantinc_test.decaf  test.asm  test.decaf
